# reviewbuddy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: beads.db  beads.left.jsonl  beads.left.meta.json
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py  cli_doctor.py  cli_help.py  cli_ui.py  constants.py
app/agents/: base.py  lane_planner.py  lane_refiner.py  rlm_agents.py  synthesizer.py
app/core/: logging.py  settings.py
app/models/: __init__.py  homebrew.py  review.py  rlm.py
app/services/: __init__.py  codex_exec.py  dspy_synthesizer.py  exa_client.py  followup.py  homebrew_tap.py  markdown_converter.py  playwright_fetcher.py  query_shaper.py  reporter.py  rlm_engine.py  search_provider.py  setup_runtime.py  storage.py  token_estimator.py  transcript_summarizer.py  url_handlers.py  usage_tracker.py  youtube_transcriber.py
app/tests/: __init__.py  test_cli_doctor.py  test_cli_help.py  test_cli_ui.py  test_codex_agents.py  test_codex_exec.py  test_dev_wrapper.py  test_dspy_synthesizer.py  test_exa_client.py  test_followup.py  test_homebrew_tap.py  test_lane_budgeting.py  test_markdown_converter.py  test_playwright_fetcher.py  test_query_shaper.py  test_refinement_targets.py  test_research_compression.py  test_review_provider_ingestion.py  test_rlm_engine.py  test_search_provider.py  test_settings.py  test_setup_runtime.py  test_storage.py  test_transcript_summarizer.py  (+3 more)
docs/: agent-cli-reference.md  cli-reference.md  deploy.md  homebrew.md
scripts/: release-check.sh  reviewbuddy  startup.sh
(+6 files in other folders)
